<resources>
    <string name="app_name">Yumlyst</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log in</string>
    <string name="skip">Skip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="no_account">No Account?</string>
    <string name="sign_up">Sign up</string>
    <string name="username">UserName</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="log_out">Log out</string>
    <string name="favourites">favourites</string>
    <string name="go_back">Go back</string>
    <string name="profile_page">Profile Page</string>
    <string name="logo">logo</string>
    <string name="yummylist">YUMMYLIST</string>
    <string name="category">Category</string>
    <string name="welcome">Welcome! What would you prefer to eat?</string>
    <string name="categories">Categories</string>
    <string name="areas">Areas</string>
    <string name="home">Home</string>
    <string name="plan">Plan</string>
    <string name="favourites_btn">Favourites</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="add_plan">ADD Plan</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="have_account">Have Account</string>
    <string name="default_web_client_id">159284341777-aqipoo4pjbr2f8idcgoffp1q30olukpv.apps.googleusercontent.com</string>
    <string name="area">Area</string>
    <string name="dealymealcategory">DealyMealCategory</string>
    <string name="profile">Profile</string>
    <string name="ingredeint">Ingredeint</string>
    <string name="remove">Remove</string>
    <string name="share_app">Share App</string>
    <string name="contact_us">Contact Us</string>
    <string name="with_email">With Email</string>
</resources>