<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whole_app_color">


    <androidx.constraintlayout.widget.Group
        android:id="@+id/profileGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="profile_profilepage_image,username,email,share_app_button,diveder,contactUs,diveder2,linearLayout" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/app_color"
        android:text="@string/log_out"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"

        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_profilepage_image"
        android:layout_width="150dp"
        android:layout_height="140dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/CircularImageView"
        />

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectan"
        android:enabled="false"
        android:paddingStart="16dp"
        android:text="@string/username"
        android:textColor="@color/app_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profile_profilepage_image"
        app:layout_constraintStart_toStartOf="@+id/profile_profilepage_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_profilepage_image">

    </com.google.android.material.textfield.MaterialAutoCompleteTextView>

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectan"
        android:enabled="false"
        android:paddingStart="16dp"
        android:text="@string/email"
        android:textColor="@color/app_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share_app_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/share_app"
        android:textColor="@color/app_color"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:icon="@drawable/link"
        app:iconTint="@color/app_color"
        app:layout_constraintEnd_toEndOf="@+id/logout_button"
        app:layout_constraintStart_toStartOf="@+id/logout_button"
        app:layout_constraintTop_toBottomOf="@+id/logout_button"
        app:strokeColor="@color/white" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/diveder"
        android:layout_width="0dp"
        android:layout_height="2dp"

        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="64dp"
        app:dividerColor="@color/app_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contactUs"
        app:layout_constraintTop_toBottomOf="@+id/share_app_button" />

    <TextView
        android:id="@+id/contactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/app_color"
        android:text="@string/contact_us"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/diveder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/diveder" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/diveder2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginHorizontal="12dp"
        app:dividerColor="@color/app_color"
        app:layout_constraintEnd_toStartOf="@+id/contactUs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/diveder" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/contactUs"
        app:layout_constraintStart_toStartOf="@id/contactUs"
        app:layout_constraintTop_toBottomOf="@+id/contactUs">

        <ImageButton
            android:id="@+id/withGmail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/gmail"
            android:text="@string/with_email"
            android:textSize="18sp"
            app:cornerRadius="12dp" />

        <ImageButton
            android:id="@+id/withLinkedIn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/linkedin"
            android:text="@string/with_email"
            android:textSize="18sp"
            app:cornerRadius="12dp"
            />

        <ImageButton
            android:id="@+id/withGithub"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:background="@drawable/github_sign"
            android:text="@string/with_email"
            android:textSize="18sp"
            app:cornerRadius="12dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>